styles.css
:root {
    --color-blue: #5b89fc;
    --color-darkblue: #1961FB;
    --color-red: #FF635C;
    --color-darkred: #FF3C31;
}

html, body {
    height: 100%;
    font-family: 'Noto Sans TC', sans-serif;
}

.header {
    grid-area: header;
    text-align: center;
}

.aside {
    grid-area: aside;
    padding-left: 100px;
}

.main {
    grid-area: main;
    margin-left: 20px;
}

.container {
    display: grid;
    grid-template-columns: 300px auto;
    grid-template-rows: 50px 100%;
    grid-template-areas: 
    "header header"
    "aside main";
    height: 100%;
}

.profile-name {
    margin-top: 0;
}

.profile-footer {
    position: absolute;
    bottom: 0;
    background-color: white;
    width: 100%;
    opacity: 0.5;
    text-align: center;
}

.profile-icon {
    position: relative;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    height: 200px;
}

.profile-level {
    color: #333;
    font-weight: bold;
}

.rank-wrapper {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

.rank-text, .rank-queue {
    font-size: 12px;
}

.rank-text.unranked {
    font-size: 16px;
}

.rank-info {
    text-align: center;
}

.section-title {
    width: 20%;
    color: gray;
    text-transform: uppercase;
    font-size: 12px;
}

.section-line {
    display: inline-block;
    border: 1px solid #ebebeb;
    border-radius:1px;
    width: 78%;
    vertical-align: middle;
}

.section {
    margin-top: 10px;
}

.match {
    display: flex;
    flex-flow: row wrap;
    border-bottom: 1px solid lightgray;
    margin-top: 5px;
    padding-bottom: 5px;
    text-align: center;
}

.match > *:not(:first-child) {
    margin-left: 10px;
}

.score .deaths {
    color: red;
}

.match.victory .result {
    color: var(--color-blue);
}

.match.defeat .result {
    color: var(--color-red);
}

.match-info {
    width: 70px;
}

.matches-wrapper {
    height: 350px;
    overflow: scroll;
    overflow-x: hidden;
    box-shadow: 0 4px 2px -2px lightgrey;
}

.match-status {
    color: #fff;
    padding-left: 10px;
    font-weight: bold;
}

.match.victory .match-status {
    background-color: var(--color-blue);
}

.match.defeat .match-status {
    background-color: var(--color-red);
}

.champion-image, .masteries, .spell, .keystone, .rune-path {
    display: inline-block;
}

.champion-image img {
    width: 64px;
    height: 64px;
    border: 0;
    border-radius: 3px;
}

.summoner-spells img, .runes img {
    width: 32px;
    height: 32px;
    display: inline-block;
    border: 0;
    border-radius: 3px;
}

.summoner-spells img:last-child {
    margin-top: 1px;
}

.additional-info img {
    display: block;
}

.summoner-spells, .runes {
    display: inline-block;
}

.items {
    display: flex;
    flex-flow: row wrap;
    width: 140px;
    align-content: start;
}

.items img {
    display: block;
    width: 32px;
    height: 32px;
    margin: 1px;
    border: 0;
    border-radius: 3px;
}

.items > div {
    position: relative;
    cursor: pointer;
}

.items span {
    display: none;
}

.items > img:hover + span {
    position: absolute;
    display: block;
    width: 100px;
    padding: 10px;
    background-color: #333;
    color: #fff;
    border: 0;
    border-radius: 3px;
    z-index: 100;
}

.items img:hover:after {
    content: attr(title);
    color: red;
}

.items img.no-image {
    border: 1px solid lightgray;
}

